[feat] add update record api
